// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating Component should render 10 images 1`] = `
<View
  pointerEvents="auto"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 300,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 300,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render custom background color 1`] = `
<View
  pointerEvents="auto"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "green",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "darkgreen",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render custom color 1`] = `
<View
  pointerEvents="auto"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "green",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render custom images 1`] = `
<View
  pointerEvents="auto"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={
          Object {
            "uri": "https://image.freepik.com/free-icon/smiley_318-121680.jpg",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render images with the size of 30 1`] = `
<View
  pointerEvents="auto"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 30,
            "width": 75,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 30,
            "width": 75,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render in readonly mode 1`] = `
<View
  pointerEvents="none"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render rating label 1`] = `
<View
  pointerEvents="auto"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 5,
        }
      }
    >
      <TextElement
        style={
          Object {
            "color": "#34495e",
            "fontFamily": "Trebuchet MS",
            "fontSize": 15,
            "textAlign": "center",
          }
        }
      >
        Rating: 
      </TextElement>
      <TextElement
        style={
          Array [
            Object {
              "fontFamily": "Trebuchet MS",
              "fontSize": 30,
              "textAlign": "center",
            },
            Object {
              "color": "#f1c40f",
            },
          ]
        }
      >
        3
      </TextElement>
      <TextElement
        style={
          Object {
            "color": "#34495e",
            "fontFamily": "Trebuchet MS",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      >
        /
        5
      </TextElement>
    </View>
    <View />
  </View>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render value with 2 decimal places 1`] = `
<View
  pointerEvents="auto"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 5,
        }
      }
    >
      <TextElement
        style={
          Object {
            "color": "#34495e",
            "fontFamily": "Trebuchet MS",
            "fontSize": 15,
            "textAlign": "center",
          }
        }
      >
        Rating: 
      </TextElement>
      <TextElement
        style={
          Array [
            Object {
              "fontFamily": "Trebuchet MS",
              "fontSize": 30,
              "textAlign": "center",
            },
            Object {
              "color": "#f1c40f",
            },
          ]
        }
      >
        2.5
      </TextElement>
      <TextElement
        style={
          Object {
            "color": "#34495e",
            "fontFamily": "Trebuchet MS",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      >
        /
        5
      </TextElement>
    </View>
    <View />
  </View>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render with an initial value of 3.3 1`] = `
<View
  pointerEvents="auto"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 5,
        }
      }
    >
      <TextElement
        style={
          Object {
            "color": "#34495e",
            "fontFamily": "Trebuchet MS",
            "fontSize": 15,
            "textAlign": "center",
          }
        }
      >
        Rating: 
      </TextElement>
      <TextElement
        style={
          Array [
            Object {
              "fontFamily": "Trebuchet MS",
              "fontSize": 30,
              "textAlign": "center",
            },
            Object {
              "color": "#f1c40f",
            },
          ]
        }
      >
        3
      </TextElement>
      <TextElement
        style={
          Object {
            "color": "#34495e",
            "fontFamily": "Trebuchet MS",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      >
        /
        5
      </TextElement>
    </View>
    <View />
  </View>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating Component should render without issues 1`] = `
<View
  pointerEvents="auto"
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View>
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;
